name:                flow
version:             0.1.0.0
-- synopsis:            
-- description:         
-- license:             
license:             AllRightsReserved
author:              Alex Babkin
maintainer:          ababkin@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
cabal-version:       >=1.8

executable flow
  hs-source-dirs: src
  main-is:        Main.hs
  -- main-is:        Example.hs
  -- exposed-modules:
    -- Deliver.CommandLine.Main

  -- ghc-options:    -O3 -Wall -threaded
  ghc-options:    -Wall
  build-depends:
      base >= 4 && <= 5
    , process
    , parsec
    , either
    , mtl
    , transformers
    , errors
    , free
    , lens
    , containers
    , prelude-safeenum

-- cabal install with tests support:
-- cabal install --enable-tests

-- to run:
-- cabal configure --enable-tests
-- cabal build
-- cabal test

test-suite Tasty
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   tests, src
  main-is:          Tasty.hs
  build-depends:
      base >= 4
    , tasty
    , tasty-hunit
    , tasty-quickcheck
    , tasty-smallcheck
    , parsec
    , split
    , either
    , transformers
    , errors
    , free
    , mtl
    , lens
    , containers
    , prelude-safeenum

